smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-newline.smithy
// Syntax error at line 2, column 9
$version
: "2.0"
